--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.cinemachine": "2.8.6",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.render-pipelines.universal": "13.1.8",
     "com.unity.timeline": "1.7.1",
